kafka user and getUsers method